<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="12dp"
    android:background="@drawable/rounded_corners"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    tools:text="@string/card">


    <ImageView
        android:id="@+id/product_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/placeholder"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:ems="9"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_img"
        tools:text="Name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:maxLines="1"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_to_cart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Description" />

    <Button
        android:id="@+id/button_add_to_cart"
        style="@style/ButtonOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

    <LinearLayout
        android:id="@+id/add_delete_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price">

        <Button
            android:id="@+id/button_add"
            style="@style/ButtonOrange"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:ems="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="10000" />

        <Button
            android:id="@+id/button_remove"
            style="@style/ButtonOrange"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/mines"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>