<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/product_cart_img"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/products"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/product_cart_img"
        app:layout_constraintTop_toTopOf="@+id/product_cart_img"
        tools:text="Name" />


    <TextView
        android:id="@+id/price_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:ems="6"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/name_cart"
        app:layout_constraintTop_toBottomOf="@id/name_cart"
        tools:text="Price" />

    <LinearLayout
        android:id="@+id/add_delete_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_cart"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_add"
            style="@style/ButtonOrangeSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:ems="2"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="1" />

        <Button
            android:id="@+id/button_remove"
            style="@style/ButtonOrangeSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/mines"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
