<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textAllCaps="false">

    <Toolbar
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentInsetStartWithNavigation="0dp"
        android:navigationIcon="@drawable/back_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="68dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/placeholder"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_img"
                tools:text="Product Name" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                tools:text="Description" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:maxLines="1"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:text="Price" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/button_add_to_cart"
        style="@style/ButtonOrange"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/add_to_cart"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/add_delete_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button_add"
            style="@style/ButtonOrange"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:ems="4"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="10000" />

        <Button
            android:id="@+id/button_remove"
            style="@style/ButtonOrange"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange"
            android:text="@string/mines"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/orange" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>